mule-user-guide/v/3.2/logging.adoc
= Logging

The less high-tech and most popular of all debugging techniques is the usage of log statements in order to follow the evolution of an application's state. In Mule, the state you're interested in resides in the messages that are flowing through your configuration and, possibly, custom code.

If you're running your Mule configuration from Eclipse, the log outputs will be visible right in Eclipse console window. If you're running Mule from the command line, the logs will then be visible in your OS console.

Mule's standalone logging configuration is stored in <Mule Installation Directory>/conf/log4j.properties: edit this file if you need to change the verbosity of the log output.

The log component is a quick and easy way to log the payload of an in-flight message. Add it anywhere in a message flow you want to probe your message:

[source, xml, linenums]
----
<flow name="FlowWithLoggers">  <http:inbound-endpoint address="http://localhost:8383/flowlog" />  <log-component />  <base64-encoder-transformer/>  <log-component />  <vm:outbound-endpoint path="next.in.line" /></flow>
----

If you need more details about the message, a simple scripted logging component like the following can come handy:

[source, xml, linenums]
----
<scripting:script name="Logger" engine="groovy">  <scripting:text>log.info(message); log.info(payload); message</scripting:text></scripting:script>
----

You can refer to it from anywhere in your flows:

[source, xml, linenums]
----
<flow name="FlowWithLoggers">  <http:inbound-endpoint address="http://localhost:8383/flowlog" />  <scripting:component script-ref="Logger" />  <base64-encoder-transformer/>  <scripting:component script-ref="Logger" />  <vm:outbound-endpoint path="next.in.line" /></flow>
----
